# solana-kyc-compliance-sdk

./:  **ARCHITECTURE.md** - Full system overview   .npmignore   Define Registry UI wireframes   File Placement Solana kyc sdk   Run server:   SDK integrates directly with Solana's native attestation service   Visual Organization Properties Color Coding   public key (wallet address) associated with this private key by running the following CLI command  ## System Architecture.   (.env.example)  (docker-compose.yml)  (root) Structure.md  **CHANGELOG.md** - Version history  **CONTRIBUTING.md** - Contribution guidelines  **SECURITY.md** - Security policy (updated from earlier)  **SUPPORT.md** - Support guidelines  .env.example  .env.example2  .gitignore  .npmignore  4th set commands   5th set commands   API Documentation File Quick Start  Actions workflow before the build step Auto-fix directory and working paths  Add ErrorCode::Innext sufficientRole to your errors.rs:  Add Update index.html  Add a sweep step to your deploy job  This ensures the CI wallet never keeps spare SOL after a deployment.  Add it as a GitHub SecretGo to your repo → Settings → Secrets and variables → Actions → New repository secretName it:  Add mandatory security audit step to CI.yml  Add this just before the build to verify:  Add this step before running any Solana or Anchor commands  Add this to your existing Solana KYC SDK README.md  Add to cargo.toml  Admin Dashboard Component.tsx  Admin-Only.rs  Anchor Instruction.rs  Architecture and diagrams   Architecture.md  Assigned Team  Auto-Sanctioning AI.ts  (+438 more)
(+311 files in other folders)
