cat > programs/kyc-compliance/Cargo.toml << 'EOF'
[package]
name = "kyc-compliance"
version = "0.1.0"
description = "KYC Compliance Program for Solana"
edition = "2021"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.18.0"
borsh = { version = "0.10", features = ["derive"] }
borsh-schema-derive-internal = { version = "0.10", optional = true }
borsh-schema = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"

[lib]
crate-type = ["cdylib", "lib"]
EOF